--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "dev-build": "tsc -b && vite build --mode localdocker",
     "lint": "eslint .",
     "preview": "vite preview"
   },
