--- a/nginx/prodnginx.conf
+++ b/nginx/prodnginx.conf
@@ -19,7 +19,7 @@ http {
         http2 on;
 
         server_name gw2-armory www.gw2-armory;
-        root /var/www/frontend-dist
+        root /var/www;
 
         ssl_certificate /etc/nginx/certs/gw2-armory.crt;
         ssl_certificate_key /etc/nginx/certs/gw2-armory.key;
@@ -28,7 +28,7 @@ http {
         add_header Strict-Transport-Security "max-age=63072000" always;
 
         location / {
-            root /var/www/frontend-dist;
+            root /var/www/armory;
             index index.html;
             try_files $uri $uri/ =404;
         }
