--- a/nginx/localopensslnginx.conf
+++ b/nginx/localopensslnginx.conf
@@ -19,7 +19,7 @@ http {
         http2 on;
 
         server_name  localhost  www.localhost;
-        root /var/www/frontend-dist-dev;
+        root /var/www;
 
         ssl_certificate /etc/nginx/certs/localhost.crt; 
         ssl_certificate_key /etc/nginx/certs/localhost.key;
@@ -28,7 +28,7 @@ http {
         add_header Strict-Transport-Security "max-age=63072000" always;
 
         location / {
-            root /var/www/frontend-dist-dev;
+            root /var/www/armory;
             index index.html;
             try_files $uri $uri/ =404;
         }
