--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -3,47 +3,41 @@ version: "3"
 volumes:
   db_data:
 services:
-  db:
-    container_name: db
+  armory-db:
+    container_name: armory-db
     image: postgres
-    restart: always
+    restart: unless-stopped
     tty: true
     volumes:
       - db_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     environment:
-      APP_ENV: ${APP_ENV}
       POSTGRES_USER: postgres
       POSTGRES_DB: gwdb
-      POSTGRES_PASSWORD_FILE: /run/secrets/db_password
+      POSTGRES_PASSWORD_FILE: /run/secrets/armory_db_password
     secrets:
-      - source: db_password
+      - source: armory_db_password
     healthcheck:
       test: pg_isready -U postgres
     networks:
-      - gw-network
+      - armory-network
 
-  backend:
-    container_name: backend 
+  armory:
+    container_name: armory 
+    restart: unless-stopped
     build:
       context: ./backend
     working_dir: /usr/src/app
-    ports:
-      - 8000:8000
     depends_on:
-      db:
+      armory-db:
         condition: service_healthy
-    volumes:
-      - ./backend:/usr/src/app
     environment:
       APP_ENV: ${APP_ENV}
       GIN_MODE: release
-      DB_DSN_FILE: /run/secrets/db_dsn
+      ARMORY_DB_PASSWORD_FILE: /run/secrets/armory_db_password
     secrets:
-      - source: db_dsn
+      - source: armory_db_password
     networks:
-      - gw-network
+      - armory-network
 
   nginx:
     container_name: nginx
@@ -52,27 +46,24 @@ services:
       dockerfile: ./nginx/Dockerfile
       args:
         CONFIG_FILE: "prodnginx"
-    restart: always
+    restart: unless-stopped
     tty: true
     ports:
       - 80:80
       - 443:443
     volumes:
-      - /etc/letsencrypt/:/etc/letsencrypt/
+      - /etc/letsencrypt/:/etc/letsencrypt/:ro
     networks:
-      - gw-network
+      - armory-network
     depends_on:
-      - db
-      - backend
+      - armory-db
+      - armory
   
 
 networks:
-  gw-network:
+  armory-network:
     driver: bridge
 
 secrets:
-
-  db_dsn:
-    file: ./secrets/db_dsn.txt
   db_password:
-    file: ./secrets/db_password.txt
+    file: ./secrets/armory_db_password.txt
