--- a/nginx/localopensslnginx.conf
+++ b/nginx/localopensslnginx.conf
@@ -34,7 +34,7 @@ http {
         }
 
         location /api/ {          
-            proxy_pass http://backend:8000/; 
+            proxy_pass http://armory:8000/; 
         }
     
     }
