docker build and containers without compose

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,10 +1,12 @@
-FROM nginx
+FROM nginx:1.28.2-alpine
 
 RUN curl -sSL https://ssl-config.mozilla.org/ffdhe2048.txt -o /etc/ssl/dhparam.pem
 
-ARG CONFIG_FILE
+# ARG CONFIG_FILE
 
-COPY ../www /var/www
-COPY nginx/${CONFIG_FILE}.conf /etc/nginx/nginx.conf
+COPY ./www /var/www
+
+# conf mounted for dev
+# COPY nginx/${CONFIG_FILE}.conf /etc/nginx/nginx.conf
 
 CMD ["nginx", "-g", "daemon off;"]
